# ubb-cs

./: README.md  main.py  main_dp.py  mainpb.py  mainpb1.py  p1.py  p3.py
Fundamentals_of_Programming/: README.md
Fundamentals_of_Programming/Exam/hangman/: __init__.py  repo.py  sentences.txt  ui.py
Fundamentals_of_Programming/Exam/order_and_chaos/: board.py  game.py  text.txt  ui.py
Fundamentals_of_Programming/Exam/scramble/: controller.py
Fundamentals_of_Programming/Lab work/assignment_5/: main_dp.py
Fundamentals_of_Programming/Lab work/assignment_6/: ui.py
Fundamentals_of_Programming/Lab work/assignment_7/: README.md
Fundamentals_of_Programming/Seminars/: Seminar2.py  Seminar3.py  Seminar4.py  Seminar5.py
Fundamentals_of_Programming/Seminars/Seminar7/: game.py
Fundamentals_of_Programming/Seminars/Seminar8/: board.py
Fundamentals_of_Programming/Seminars/Seminar9/: cars.data
ProjectAI 2/: ga_results.csv
Sem_1/Algebra/problem2_algebra/: main.py  output1.txt  output2.txt  output3.txt  output4.txt  output6.txt  project2_code.txt
Sem_1/Algebra/problem3_algebra/: main.py  output.txt  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt  project3_main.txt
Sem_1/Algebra/problema5-algebra/: main.py  output1.txt  output2.txt  output3.txt  output4.txt  output5.txt
Sem_1/Analysis/assignment_10/: main.py
Sem_1/Analysis/assignment_11/: extra.py  extra2.py  main.py
Sem_1/Computer system architecture/: README.md
Sem_1/Fundamentals_of_Programming/: README.md
Sem_2/DS/: Test_laborator.ipynb  lab1.ipynb  model.ipynb
Sem_2/DSA/L5-SMM_BST/: App.cpp  CMakeLists.txt  SMMIterator.cpp  SMMIterator.h  ShortTest.cpp  SortedMultiMap.cpp  SortedMultiMap.h
Sem_2/OOP/: README.md
Sem_2/OOP/Lab work/a2-3/: CMakeLists.txt  README.md  ui.c
Sem_2/OOP/Lab work/a2-3/Domain/: Domain.c  Domain.h  DynamicArray.c  DynamicArray.h
Sem_2/OOP/Lab work/a2-3/Repo/: Repository.c  Repository.h
Sem_2/OOP/Lab work/a2-3/Service/: Service.c  Service.h
Sem_2/OOP/Lab work/a2-3/Tests/: Test.c  Test.h
Sem_2/OOP/Lab work/a2-3/UndoRedo/: Operation.c  Operation.h  UndoRedoRepo.c  UndoRedoRepo.h
Sem_2/OOP/Lab work/a4-5/: CMakeLists.txt  README.md  main.cpp
Sem_2/OOP/Lab work/a4-5/Domain/: DynamicArray.cpp  DynamicArray.h  Tutorial.cpp  Tutorial.h
Sem_2/OOP/Lab work/a4-5/Repository/: Repo.cpp  Repo.h
Sem_2/OOP/Lab work/a4-5/Service/: Service.cpp  Service.h
Sem_2/OOP/Lab work/a4-5/Tests/: TestDynamicArray.cpp  TestDynamicArray.h  TestRepo.cpp  TestRepo.h  TestService.cpp  TestService.h  TestTutorial.cpp  TestTutorial.h
Sem_2/OOP/Lab work/a4-5/UI/: Ui.cpp  Ui.h
Sem_2/OOP/Lab work/a6-7/: CMakeLists.txt  README.md  main.cpp  tema8.files  tutorial.txt  tutorials.db  watchlist.csv  watchlist.html
Sem_2/OOP/Lab work/a6-7/Domain/: Tutorial.h  Utils.cpp
Sem_2/OOP/Lab work/a6-7/Repository/: CSVWatchList.cpp  CSVWatchList.h  DBRepo.cpp  DBRepo.h  Exceptions.cpp  FileRepo.h  HTMLWatchList.h  Repo.h  WatchList.h
Sem_2/OOP/Lab work/a6-7/Service/: Service.cpp  Service.h
Sem_2/OOP/Lab work/a6-7/UI/: Ui.cpp  Ui.h
Sem_2/OOP/Lab work/a8-9/: .gitignore  CMakeLists.txt  tutorial.txt
Sem_2/OOP/Lab work/a8-9/Domain/: Tutorial.cpp
Sem_2/OOP/Lab work/a8-9/GUI/: AdminWindow.cpp  TutorialsList.h  UserWindow.cpp  UserWindow.h  WatchListModel.cpp  WatchListModel.h  WatchListWindow.cpp  WatchListWindow.h  mainWindow.cpp  mainWindow.ui  qcustomplot.cpp  qcustomplot.h
Sem_2/OOP/Lab work/a8-9/Repository/: Exceptions.h  FileWatchList.cpp  FileWatchList.h
Sem_2/OOP/Lab work/a8-9/Service/: Action.h  Service.h
Sem_2/OOP/Lab work/a8-9/UI/: Ui.cpp
Sem_2/OOP/Seminars/seminar7/: CMakeLists.txt  ChatSesion.cpp  ChatSesion.h  Subject.cpp  Subject.h  chatwindow.cpp  chatwindow.h  chatwindow.ui  main.cpp  observer.cpp  observer.h
Sem_2/OOP/Test practice/T1/test1/: CMakeLists.txt  main.cpp
Sem_2/OOP/Test practice/T1/test1/Domain/: DynamicArray.h  Player.cpp  Player.h
Sem_2/OOP/Test practice/T1/test1/Repo/: Repo.cpp  Repo.h
Sem_2/OOP/Test practice/T1/test1/Service/: Service.cpp  Service.h
Sem_2/OOP/Test practice/T1/test1/Tests/: Test.cpp  Test.h
Sem_2/OOP/Test practice/T1/test1/UI/: UI.cpp  UI.h
Sem_2/OOP/Test practice/T3/Search_engine/: CMakeLists.txt  Document.cpp  Document.h  Repo.cpp  Repo.h  Service.cpp  Service.h  documents.txt  gui.cpp  gui.h  gui.ui  main.cpp
Sem_2/OOP/Test practice/T3/Shopping_list/: CMakeLists.txt  Item.cpp  Item.h  Repo.cpp  Repo.h  Service.cpp  Service.h  gui.cpp  gui.h  gui.ui  items.txt  main.cpp
Sem_2/OOP/Test practice/T3/Task_manager/: CMakeLists.txt  Repo.cpp  Repo.h  Service.cpp  Service.h  Task.cpp  Task.h  gui.cpp  gui.h  gui.ui  main.cpp  tasks.txt
Sem_2/OOP/Test practice/T3/test3/: CMakeLists.txt  Equation.cpp  Equation.h  Repo.cpp  Repo.h  Service.cpp  Service.h  eq.txt  gui.cpp  gui.h  gui.ui
Sem_3/APM/: README.md
Sem_3/CompNet/: lab1111.pkt  lab5-pt.pkt  lab7-pt.pkt  labDynamic.pkt  practic.pkt  udp_server.py
Sem_3/FLP/: Dosar de laborator-PLF.docx  PLF.docx
Sem_3/PS/: ex10.m  ex14.m  lab2.mlx  lab3.mlx  lab3_1.mlx  lab3_2.mlx  lab4.mlx  lab4_1.mlx  lab5.m  lab6.mlx
Sem_4/MPP/: README.md
Sem_4/SoftwareEngineering/: README.md
Sem_5/PDP/pdp_lab5/: CMakeLists.txt  benchmark.cpp  bigint.cpp  bigint.h  bigint_polynomial.cpp  polynomial.h
Sem_5/PDP/pdp_lab6/: CMakeLists.txt  HamiltonianForkJoin.java  README.md  compare_performance.sh  main.cpp
Sem_5/PDP/pdp_lab7/: CMakeLists.txt  MPI_EXPLANATION.md  README.md  bigint.h  bigint_mpi.cpp  bigint_mpi.h  polynomial.h  polynomial_mpi.cpp  polynomial_mpi.h
Sem_5/PDP/pdp_lab8/: ARCHITECTURE.md  CMakeLists.txt  Makefile  build_and_run.sh  dsm.hpp  main.cpp
ai_labs/: Project.ipynb  lab2.ipynb  lab3.ipynb  lab4_ex.ipynb  lab8.ipynb
backtracking vs dinamic programming/: main.py
building admin project/: functions.py  start.py
computing complexity/: README.md  alternative.py  main.py
lab2/: menu.html
lab5/: desktop.html
lab6/php/: db.php
lab8/: test.cs
list vs dict/: README.md  main.py
src/: program.py
starting with python/: README.md  p2.py
(+709 files in other folders)
